sofa/src/com/tehforce/sofa/parser/SofaLangParser.java
// Generated from SofaLang.g4 by ANTLR 4.1
package com.tehforce.sofa.parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SofaLangParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__37=1, T__36=2, T__35=3, T__34=4, T__33=5, T__32=6, T__31=7, T__30=8, 
		T__29=9, T__28=10, T__27=11, T__26=12, T__25=13, T__24=14, T__23=15, T__22=16, 
		T__21=17, T__20=18, T__19=19, T__18=20, T__17=21, T__16=22, T__15=23, 
		T__14=24, T__13=25, T__12=26, T__11=27, T__10=28, T__9=29, T__8=30, T__7=31, 
		T__6=32, T__5=33, T__4=34, T__3=35, T__2=36, T__1=37, T__0=38, INT=39, 
		ID=40, ARROW=41;
	public static final String[] tokenNames = {
		"<INVALID>", "'Heal'", "'wounded'", "'Warrior'", "'('", "'alive'", "'Any'", 
		"'<'", "'!='", "'Down'", "'<='", "'Enemy'", "'otherwise'", "'range'", 
		"'{'", "'Healer'", "'Right'", "'closest'", "'maxhealth'", "'Roam'", "'}'", 
		"'Up'", "'Move'", "'.'", "')'", "'Friendly'", "'health'", "'Attack'", 
		"'distance'", "'>'", "'Left'", "'Ranger'", "'inRange'", "'=='", "'farthest'", 
		"'oppositeDirection'", "'direction'", "'>='", "'Defend'", "INT", "ID", 
		"'->'"
	};
	public static final int
		RULE_prog = 0, RULE_root = 1, RULE_team = 2, RULE_classentry = 3, RULE_classname = 4, 
		RULE_logic = 5, RULE_expr = 6, RULE_comparison = 7, RULE_numberBuiltin = 8, 
		RULE_directionalBuiltin = 9, RULE_booleanBuiltin = 10, RULE_targetBuiltin = 11, 
		RULE_token = 12, RULE_direction = 13, RULE_alignment = 14, RULE_target = 15, 
		RULE_bop = 16;
	public static final String[] ruleNames = {
		"prog", "root", "team", "classentry", "classname", "logic", "expr", "comparison", 
		"numberBuiltin", "directionalBuiltin", "booleanBuiltin", "targetBuiltin", 
		"token", "direction", "alignment", "target", "bop"
	};

	@Override
	public String getGrammarFileName() { return "SofaLang.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public SofaLangParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	
	public static class ProgContext extends ParserRuleContext {
		public RootContext root() {
			return getRuleContext(RootContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34); root();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RootContext extends ParserRuleContext {
		public TeamContext team() {
			return getRuleContext(TeamContext.class,0);
		}
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_root);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36); team();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TeamContext extends ParserRuleContext {
		public ClassentryContext classentry(int i) {
			return getRuleContext(ClassentryContext.class,i);
		}
		public List<ClassentryContext> classentry() {
			return getRuleContexts(ClassentryContext.class);
		}
		public TeamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_team; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitTeam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TeamContext team() throws RecognitionException {
		TeamContext _localctx = new TeamContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_team);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(39); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(38); classentry();
				}
				}
				setState(41); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 3) | (1L << 6) | (1L << 15) | (1L << 31))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassentryContext extends ParserRuleContext {
		public LogicContext logic(int i) {
			return getRuleContext(LogicContext.class,i);
		}
		public List<LogicContext> logic() {
			return getRuleContexts(LogicContext.class);
		}
		public ClassnameContext classname() {
			return getRuleContext(ClassnameContext.class,0);
		}
		public ClassentryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classentry; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitClassentry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassentryContext classentry() throws RecognitionException {
		ClassentryContext _localctx = new ClassentryContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classentry);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(43); classname();
			setState(44); match(14);
			setState(46); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(45); logic();
				}
				}
				setState(48); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 2) | (1L << 5) | (1L << 11) | (1L << 12) | (1L << 13) | (1L << 18) | (1L << 25) | (1L << 26) | (1L << 28) | (1L << 32) | (1L << INT))) != 0) );
			setState(50); match(20);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassnameContext extends ParserRuleContext {
		public ClassnameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classname; }
	 
		public ClassnameContext() { }
		public void copyFrom(ClassnameContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ClassName_RangerContext extends ClassnameContext {
		public ClassName_RangerContext(ClassnameContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitClassName_Ranger(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ClassName_AnyContext extends ClassnameContext {
		public ClassName_AnyContext(ClassnameContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitClassName_Any(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ClassName_HealerContext extends ClassnameContext {
		public ClassName_HealerContext(ClassnameContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitClassName_Healer(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ClassName_WarriorContext extends ClassnameContext {
		public ClassName_WarriorContext(ClassnameContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitClassName_Warrior(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassnameContext classname() throws RecognitionException {
		ClassnameContext _localctx = new ClassnameContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classname);
		try {
			setState(56);
			switch (_input.LA(1)) {
			case 3:
				_localctx = new ClassName_WarriorContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(52); match(3);
				}
				break;
			case 15:
				_localctx = new ClassName_HealerContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(53); match(15);
				}
				break;
			case 31:
				_localctx = new ClassName_RangerContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(54); match(31);
				}
				break;
			case 6:
				_localctx = new ClassName_AnyContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(55); match(6);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicContext extends ParserRuleContext {
		public TokenContext token(int i) {
			return getRuleContext(TokenContext.class,i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public TerminalNode ARROW() { return getToken(SofaLangParser.ARROW, 0); }
		public List<TokenContext> token() {
			return getRuleContexts(TokenContext.class);
		}
		public LogicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logic; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitLogic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicContext logic() throws RecognitionException {
		LogicContext _localctx = new LogicContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_logic);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(58); expr();
				}
				}
				setState(61); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 2) | (1L << 5) | (1L << 11) | (1L << 12) | (1L << 13) | (1L << 18) | (1L << 25) | (1L << 26) | (1L << 28) | (1L << 32) | (1L << INT))) != 0) );
			{
			setState(63); match(ARROW);
			}
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64); token();
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 19) | (1L << 22) | (1L << 27) | (1L << 38))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	 
		public ExprContext() { }
		public void copyFrom(ExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Expr_booleanBuiltinContext extends ExprContext {
		public BooleanBuiltinContext booleanBuiltin() {
			return getRuleContext(BooleanBuiltinContext.class,0);
		}
		public Expr_booleanBuiltinContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitExpr_booleanBuiltin(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expr_OtherwiseContext extends ExprContext {
		public Expr_OtherwiseContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitExpr_Otherwise(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Expr_ComparisonContext extends ExprContext {
		public ComparisonContext comparison() {
			return getRuleContext(ComparisonContext.class,0);
		}
		public Expr_ComparisonContext(ExprContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitExpr_Comparison(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_expr);
		try {
			setState(72);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new Expr_ComparisonContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(69); comparison();
				}
				break;

			case 2:
				_localctx = new Expr_booleanBuiltinContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(70); booleanBuiltin();
				}
				break;

			case 3:
				_localctx = new Expr_OtherwiseContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(71); match(12);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ComparisonContext extends ParserRuleContext {
		public ComparisonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comparison; }
	 
		public ComparisonContext() { }
		public void copyFrom(ComparisonContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Comparison_numberBuiltinContext extends ComparisonContext {
		public BopContext bop() {
			return getRuleContext(BopContext.class,0);
		}
		public NumberBuiltinContext numberBuiltin(int i) {
			return getRuleContext(NumberBuiltinContext.class,i);
		}
		public List<NumberBuiltinContext> numberBuiltin() {
			return getRuleContexts(NumberBuiltinContext.class);
		}
		public Comparison_numberBuiltinContext(ComparisonContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitComparison_numberBuiltin(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComparisonContext comparison() throws RecognitionException {
		ComparisonContext _localctx = new ComparisonContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_comparison);
		try {
			_localctx = new Comparison_numberBuiltinContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(74); numberBuiltin();
			setState(75); bop();
			setState(76); numberBuiltin();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberBuiltinContext extends ParserRuleContext {
		public NumberBuiltinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numberBuiltin; }
	 
		public NumberBuiltinContext() { }
		public void copyFrom(NumberBuiltinContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class NumberBuiltin_rangeContext extends NumberBuiltinContext {
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public NumberBuiltin_rangeContext(NumberBuiltinContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitNumberBuiltin_range(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumberBuiltin_healthContext extends NumberBuiltinContext {
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public NumberBuiltin_healthContext(NumberBuiltinContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitNumberBuiltin_health(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumberBuiltin_numberContext extends NumberBuiltinContext {
		public TerminalNode INT() { return getToken(SofaLangParser.INT, 0); }
		public NumberBuiltin_numberContext(NumberBuiltinContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitNumberBuiltin_number(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumberBuiltin_distanceToContext extends NumberBuiltinContext {
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public TargetBuiltinContext targetBuiltin() {
			return getRuleContext(TargetBuiltinContext.class,0);
		}
		public NumberBuiltin_distanceToContext(NumberBuiltinContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitNumberBuiltin_distanceTo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class NumberBuiltin_maxHealthContext extends NumberBuiltinContext {
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public NumberBuiltin_maxHealthContext(NumberBuiltinContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitNumberBuiltin_maxHealth(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberBuiltinContext numberBuiltin() throws RecognitionException {
		NumberBuiltinContext _localctx = new NumberBuiltinContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_numberBuiltin);
		int _la;
		try {
			setState(113);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new NumberBuiltin_distanceToContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				_la = _input.LA(1);
				if (_la==11 || _la==25) {
					{
					setState(78); target();
					setState(79); match(23);
					}
				}

				{
				setState(83); match(28);
				}
				setState(84); match(4);
				setState(85); targetBuiltin();
				setState(86); match(24);
				}
				break;

			case 2:
				_localctx = new NumberBuiltin_healthContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(91);
				_la = _input.LA(1);
				if (_la==11 || _la==25) {
					{
					setState(88); target();
					setState(89); match(23);
					}
				}

				{
				setState(93); match(26);
				}
				setState(94); match(4);
				setState(95); match(24);
				}
				break;

			case 3:
				_localctx = new NumberBuiltin_maxHealthContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(99);
				_la = _input.LA(1);
				if (_la==11 || _la==25) {
					{
					setState(96); target();
					setState(97); match(23);
					}
				}

				{
				setState(101); match(18);
				}
				setState(102); match(4);
				setState(103); match(24);
				}
				break;

			case 4:
				_localctx = new NumberBuiltin_rangeContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(107);
				_la = _input.LA(1);
				if (_la==11 || _la==25) {
					{
					setState(104); target();
					setState(105); match(23);
					}
				}

				{
				setState(109); match(13);
				}
				setState(110); match(4);
				setState(111); match(24);
				}
				break;

			case 5:
				_localctx = new NumberBuiltin_numberContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(112); match(INT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DirectionalBuiltinContext extends ParserRuleContext {
		public DirectionalBuiltinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_directionalBuiltin; }
	 
		public DirectionalBuiltinContext() { }
		public void copyFrom(DirectionalBuiltinContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DirectionalBultin_directionToContext extends DirectionalBuiltinContext {
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public TargetBuiltinContext targetBuiltin() {
			return getRuleContext(TargetBuiltinContext.class,0);
		}
		public DirectionalBultin_directionToContext(DirectionalBuiltinContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitDirectionalBultin_directionTo(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DirectionalBultin_directionContext extends DirectionalBuiltinContext {
		public DirectionContext direction() {
			return getRuleContext(DirectionContext.class,0);
		}
		public DirectionalBultin_directionContext(DirectionalBuiltinContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitDirectionalBultin_direction(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DirectionalBultin_oppositeDirectionToContext extends DirectionalBuiltinContext {
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public TargetBuiltinContext targetBuiltin() {
			return getRuleContext(TargetBuiltinContext.class,0);
		}
		public DirectionalBultin_oppositeDirectionToContext(DirectionalBuiltinContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitDirectionalBultin_oppositeDirectionTo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DirectionalBuiltinContext directionalBuiltin() throws RecognitionException {
		DirectionalBuiltinContext _localctx = new DirectionalBuiltinContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_directionalBuiltin);
		int _la;
		try {
			setState(136);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				_localctx = new DirectionalBultin_directionToContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				_la = _input.LA(1);
				if (_la==11 || _la==25) {
					{
					setState(115); target();
					setState(116); match(23);
					}
				}

				{
				setState(120); match(36);
				}
				setState(121); match(4);
				setState(122); targetBuiltin();
				setState(123); match(24);
				}
				break;

			case 2:
				_localctx = new DirectionalBultin_oppositeDirectionToContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(128);
				_la = _input.LA(1);
				if (_la==11 || _la==25) {
					{
					setState(125); target();
					setState(126); match(23);
					}
				}

				{
				setState(130); match(35);
				}
				setState(131); match(4);
				setState(132); targetBuiltin();
				setState(133); match(24);
				}
				break;

			case 3:
				_localctx = new DirectionalBultin_directionContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(135); direction();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanBuiltinContext extends ParserRuleContext {
		public BooleanBuiltinContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanBuiltin; }
	 
		public BooleanBuiltinContext() { }
		public void copyFrom(BooleanBuiltinContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class BooleanBuiltin_woundedContext extends BooleanBuiltinContext {
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public BooleanBuiltin_woundedContext(BooleanBuiltinContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitBooleanBuiltin_wounded(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BooleanBuiltin_aliveContext extends BooleanBuiltinContext {
		public TargetContext target() {
			return getRuleContext(TargetContext.class,0);
		}
		public BooleanBuiltin_aliveContext(BooleanBuiltinContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitBooleanBuiltin_alive(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BooleanBuiltin_inRangeContext extends BooleanBuiltinContext {
		public TargetContext target(int i) {
			return getRuleContext(TargetContext.class,i);
		}
		public List<TargetContext> target() {
			return getRuleContexts(TargetContext.class);
		}
		public BooleanBuiltin_inRangeContext(BooleanBuiltinContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SofaLangVisitor ) return ((SofaLangVisitor<? extends T>)visitor).visitBooleanBuiltin_inRange(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooleanBuiltinContext booleanBuiltin() throws RecognitionException {
		BooleanBuiltinContext _localctx = new BooleanBuiltinContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_booleanBuiltin);
		int _la;
		try {
			setState(164);
			switch ( getInterpreter().adaptivePredict(_input,17,_ctx) ) {
			case 1:
				_localctx = new BooleanBuiltin_woundedContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(141);
				_la = _input.LA(1);
				if (_la==11 || _la==25) {
					{
					setState(138); target();
					setState(139); match(23);
					}
				}

				{
				setState(143); match(2);
				}
				setState(144); match(4);
				setState(145); match(24);
				}
				break;

			case 2:
				_localctx = new BooleanBuiltin_inRangeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(149);
				_la = _input.LA(1);
				if (_la==11 || _la==25) {
					{
					setState(146); target();
					setState(147); match(23);
					}
				}

				{
				setState(151); match(32);
				}
				setState(152); match(4);
				setState(153); target();
				setState(154); match(24);
				}
				break;

			case 3:
				_localctx = new BooleanBuiltin_aliveContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(159);
				_la = _input.LA(1);
				if (_la==11 || _la==25) {
					{
					setState(156); target();
					setState(157); match(23);
					}
				}

				{
				setState(161); match(5);
				}
				setState(162); match(4);
				setState(163); match(24);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
